--- a/panel.html
+++ b/panel.html
@@ -45,6 +45,9 @@
 			<div class="form-group">
 			视频CID：
 				<span id="cid"></span>
+			&nbsp;&nbsp;&nbsp;
+			清晰度：
+				<span id="quality"></span>
 			&nbsp;&nbsp;&nbsp;下载弹幕：
 				<button class="btn btn-success" onclick="xml()">.xml</button>
 				<button class="btn btn-primary" onclick="ass()">.ass</button>
