delete unused functions

--- a/panel.html
+++ b/panel.html
@@ -18,7 +18,7 @@
 <div class="container" style="margin: 0 20px 20px 20px;">
 	<div class="row">
 		<h1>Mimi Downloader</h1>
-		<p id="help">欢迎使用米米下载器</p>
+		<p id="help">欢迎使用米米下载器，轻松下载视频、弹幕</p>
 	</div>
 	
 	<div class="row">
@@ -105,7 +105,7 @@ function help() {
 	alert("Hello, world!");
 }
 function about() {
-	alert("Mimi Downloader");
+	alert("Mimi Downloader Ver 1.0.1\nWe are using Node.js" + process.versions.node + ", Chromium" + process.versions.chrome + ", and Electron" + process.versions.electron + ". Powered by Mimi.");
 }
 function selectAll() {
 	$('input[type="checkbox"]').prop("checked", true);
