--- a/panel.html
+++ b/panel.html
@@ -88,7 +88,10 @@
 		<div class="row">
 			<div class="form-group">
 			下载路径
-				<input type="text" class="form-control" id="downloadPath"/>
+				<div class="input-group">
+				  	<div class="input-group-addon" onclick="openDialog()">浏览</div>
+					<input type="text" class="form-control" id="downloadPath"/>
+				</div>
 			</div>
 		</div>
 
