--- a/panel.html
+++ b/panel.html
@@ -14,8 +14,12 @@
 	.info, #nav {
 		display: none;
 	}
-	img {
+	table img {
 		max-width: 80%;
+	}
+	#bg {
+		width: 100%;
+		z-index: -1;
 	}
 	.input-group-addon {
 		cursor: pointer;
@@ -124,6 +128,8 @@
 			</table>
 		</div>
 	</div>
+
+	<img src="bg.png" id="bg" class="mt20">
 </div>
 
 <script src="cdn/jquery-3.2.1.min.js"></script>
