--- a/panel.html
+++ b/panel.html
@@ -11,7 +11,7 @@
 	.mt20 {
 		margin-top: 20px;
 	}
-	.info, #nav, #backup-url, .glyphicon {
+	.info, #nav, .glyphicon {
 		display: none;
 	}
 	.has-feedback .glyphicon {
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 	
-	<div class="row" id="backup-url">
+	<div class="row">
 		<div class="form-group">
 			<label class="control-label">PlayUrl</label>
 			<input type="text" class="form-control" id="playUrl"/>
@@ -91,8 +91,8 @@
 				<thead>
 					<tr>
 						<th>编号</th>
-						<th>时长(ms)</th>
-						<th>大小(bit)</th>
+						<th>时长(s)</th>
+						<th>大小(MB)</th>
 						<th>选定</th>	
 					</tr>
 				</thead>
@@ -163,7 +163,7 @@ $("button").each(function() {
 $("#downloadPath").val(__dirname);
 
 function help() {
-	alert("请填写视频链接（即视频播放界面的url），然后点击“获取下载链接”进行下一步。如果提示手动输入PlayUrl，请用浏览器打开视频链接，选择html5播放器播放视频，在浏览器的开发者菜单中查看XHR请求，找到名称为playurl的项，将其地址填入输入框内即可。");
+	alert("请填写视频链接（即视频播放界面的url），以及PlayUrl（请用浏览器打开视频链接，选择html5播放器播放视频，在浏览器的开发者菜单中查看XHR请求，找到名称为playurl的项，将其地址填入输入框内），然后点击“获取下载链接”进行下一步。");
 }
 function about() {
 	alert("Mimi Downloader Ver 1.1.0\n\nWe are using Node.js " + process.versions.node + ", Chromium " + process.versions.chrome + ", and Electron " + process.versions.electron + ". Powered by Mimi.");
