--- a/panel.html
+++ b/panel.html
@@ -144,6 +144,7 @@
 
 <script src="cdn/jquery-3.2.1.min.js"></script>
 <script>if (typeof module === "object") { window.jQuery = window.$ = module.exports; }</script>
+<script src="md5.js"></script>
 <script src="ass.js"></script>
 <script src="panel.js"></script>
 <script>
