--- a/panel.html
+++ b/panel.html
@@ -41,7 +41,7 @@
 <div class="container" style="margin: 0 20px 20px 20px;">
 	<div class="row">
 		<h1>Mimi Downloader</h1>
-		<p id="help">欢迎使用米米下载器，轻松下载视频、弹幕</p>
+		<p id="help">欢迎使用米米下载器，轻松下载高清视频、弹幕</p>
 	</div>
 
 	<div class="row">
@@ -76,10 +76,10 @@
 			<div class="form-group">
 				<label class="control-label">视频CID：</label>
 				<span id="cid"></span>
-			&nbsp;&nbsp;&nbsp;
+				&nbsp;&nbsp;&nbsp;
 				<label class="control-label">清晰度：</label>
 				<span id="quality"></span>
-			&nbsp;&nbsp;&nbsp;
+				&nbsp;&nbsp;&nbsp;
 				<label class="control-label">下载弹幕：</label>
 				<button class="btn btn-success" onclick="xml()">.xml</button>
 				<button class="btn btn-primary" onclick="ass()">.ass</button>
